--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
   intl: ^0.20.2
+  path: ^1.9.0
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
